<resources>
    <string name="app_name">Patronage 2022</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--    bottom navigation bar item labels   -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="hello_hello">Hello Hello</string>
    <string name="product_image_description">Product image</string>
    <string name="product_price">Price: %d</string>
    <!-- Login / registration UI strings -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="email_hint">E-mail</string>
    <!-- Registration validation error messages -->
    <string name="not_valid_username_error">"Enter a valid name"</string>
    <string name="not_valid_email_error">"Enter a valid email address"</string>
    <string name="not_valid_password_error">"Enter a valid password"</string>
    <!-- RegisterUser response strings -->
    <string name="registrationSuccess">Registration Success!</string>
    <string name="registrationFailed"> Registration Failed!</string>

</resources>